2010-09-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/term-ja.diff docs/gnuplot-ja.doc:
	Sync Japanese documentation to gnuplot.doc rev 1.623

2010-09-04  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/set.c (set_logscale): Removed arbitrary limitation for log base
	(was >= 1.1, now > 1.0)

2010-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/readline.c (readline): Fix Windows breakage (failure to
	recognize ^M as newline) caused by error in OSK code removal.

2010-08-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gnupmdrv.rc: Removed menu item Commands to clipboard.

	* src/gpexecute.c (gp_execute): Removed bSend2gp and call to
	TextToClipboard.

	* src/mouse.c (alert): Use DosBeep under OS/2.

	* os2/gclient.c: Removed unused #define GNUPMDRV.

2010-08-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (conv_text):
	Until now, the "show" and "save" commands have replaced all non-ascii
	characters with a byte-by-byte octal escape sequence.  This makes any
	labels, variables, titles, etc not human-readable if they contain UTF8
	encoded characters. Now we simply pass them through as-is if the current
	encoding is UTF-8. I think this is the correct thing to do for other
	8-bit encodings as well, but I can't test those easily.

2010-08-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Allow "fc <colorspec>" as an in-line
	option to the plot command for plot styles that use a fill.

2010-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  The gnuplot_x11 side of Shige's fix.

2010-08-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/x11.trm:  The last font used inside an enhanced text string was
	not being cleared on exit.

2010-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/ansichek.h src/gplt_x11.c src/plot.c src/readline.c src/show.c
	src/stdfn.h src/syscfg.h term/x11.trm:  Remove conditional code for 