@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: misc.c,v 1.121 2010/07/08 21:25:30 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: misc.c,v 1.122 2010/09/08 20:56:14 juhaszp Exp $"); }
 #endif
 
 /* GNUPLOT - misc.c */
@@ -854,9 +854,6 @@ lp_parse(struct lp_style_type *lp, TBOOLEAN allow_ls, TBOOLEAN allow_point)
 			newlp.pm3d_color.lt = int_expression() - 1;
 		    }
 		}
-		if (newlp.pm3d_color.type == TC_LT
-		||  newlp.l_type == LT_COLORFROMCOLUMN) /* FIXME: not sure about this */
-		    newlp.use_palette = 0;
 		continue;
 	    }
 
